# inventor-mcp

./: .gitignore  .mcp.json.example  LICENSE  README.md  llms-install.md  pyproject.toml
docs/: inventor-api-notes.md
skills/inventor-din-parts/: SKILL.md
skills/inventor-modeling/: SKILL.md
src/: inventor_api.py  server.py
